--- a/douban/douban_book/config.json
+++ b/douban/douban_book/config.json
@@ -7,5 +7,8 @@
     "debug": true,
     "webui": {
         "port": 51001
+    },
+    "result_worker": {
+        "result_cls": "result.DoubanResultWorker"
     }
 }
